--- a/app/composer.json
+++ b/app/composer.json
@@ -1,24 +1,12 @@
 {
-    "require": {
+	"require":{
+		"illuminate/database": "5.5.*",
+		"php": ">=7.0"
+	},
 
-    },
-    "require-dev": {
-        "apigen/apigen": "dev-master",
-        "phpmd/phpmd": "@stable",
-        "phpunit/phpunit": "^7.0",
-        "roave/better-reflection": "dev-master",
-        "squizlabs/php_codesniffer": "3.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "AppTest\\": "test/"
-        }
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+	"autoload":{
+		"psr-4": {
+			"wishlist\\" : "src/"
+		}
+	}
 }
