Test connection base de donnée wishlist

--- a/app/src/conf/conf.ini
+++ b/app/src/conf/conf.ini
@@ -1,7 +1,7 @@
 driver=mysql
-username=
-password=
-host=
-database=
+username=root
+password=root
+host=localhost
+database=wishlist
 charset=utf8
 collation=utf8_unicode_ci
