Config du .ini pour la connection à la BDD

--- a/app/src/config/conf.ini
+++ b/app/src/config/conf.ini
@@ -1,7 +1,8 @@
-driver=mysql
-username=root
-password=root
-host=localhost
-database=wishlist
-charset=utf8
-collation=utf8_unicode_ci
+driver    = 'mysql'
+host      = 'mysql'
+database  = 'wishlist'
+username  = 'root'
+password  ='root'
+charset   = 'utf8'
+collation = 'utf8_unicode_ci'
+prefix    = ''
