--- a/app/composer.json
+++ b/app/composer.json
@@ -2,7 +2,8 @@
 	"require":{
 		"illuminate/database": "5.5.*",
 		"php": ">=7.0",
-		"slim/slim": "2.*"
+		"slim/slim": "2.*",
+		"myclabs/php-enum": "1.7"
 	},
 
 	"autoload":{
